INDIGO-325: Fixed gap above channel window

--- a/war/src/main/webapp/engines/jahia-anthracite/_edit_contribute.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_edit_contribute.scss
@@ -1585,6 +1585,10 @@ body[data-indigo-app="contribute"] {
         box-shadow: 0 5px 10px 1px rgba(49, 49, 49, 0.5)!important;
         margin-top: 8px !important;
 
+		body[data-channel] & {
+			margin-top: 0!important;
+		}
+
         body[data-edit-window-style="settings"] &,
 		.x-viewport-adminmode &,
 		.x-viewport-dashboardmode & {
